changes to the UI
added functionality to the search button and retrieval of star wars people

--- a/UI/src/app/app.component.html
+++ b/UI/src/app/app.component.html
@@ -23,7 +23,7 @@
               </div>
               <div class="col-md-2 col-xs-5 width-auto">
                   <div class="header-searchbar">
-                      <a href="#search-header" class="header-search-form text-white"><i class="fas fa-search search-button"></i></a>
+                      <a routerLink="/search" class="header-search-form text-white"><i class="fas fa-search search-button"></i></a>
                       <!-- search input-->
                       <form id="search-header" method="post" action="search-result.html" name="search-header" class="mfp-hide search-form-result">
                           <div class="search-form position-relative">
@@ -40,4 +40,3 @@
 </header>
 
 <router-outlet> </router-outlet>
-<app-star-wars></app-star-wars>
