--- a/UI/src/app/chuck-swapi/chuck-swapi.component.html
+++ b/UI/src/app/chuck-swapi/chuck-swapi.component.html
@@ -11,8 +11,34 @@
         <div class="row">
             <div class="col-md-6 col-sm-10 col-xs-12 center-col">
                 <ul class="no-padding list-style-4 list-style-color" *ngFor = "let dataItem of ChuckJokeCategories">
-                    <li>{{dataItem}}</li>
+
+                    <li >
+                        <a (click)="itemClick(dataItem)">{{dataItem}}</a>
+                    </li>
                      
+                </ul>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="wow fadeIn bg-extra-dark-gray">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-7 col-sm-12 col-xs-12 center-col text-center margin-100px-bottom xs-margin-40px-bottom">
+                <div class="position-relative overflow-hidden width-100">
+                    <span class=" text-outside-line-full alt-font font-weight-600 text-uppercase">Joke By Selected Category</span>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6 col-sm-10 col-xs-12 center-col">
+                <ul class="no-padding list-style-4 list-style-color" *ngFor = "let dataItem of ChuckJokeByCategory">
+                    <li>
+                        <p>{{dataItem.created_at}}</p>
+                        <p>"{{dataItem.icon_url}}</p>
+                        <p>{{dataItem.id}}</p>
+                        <p>{{dataItem.updated_at}}</p>
+                        <p>{{dataItem.value}}</p></li>
                 </ul>
             </div>
         </div>
