--- a/UI/src/app/star-wars/star-wars.component.html
+++ b/UI/src/app/star-wars/star-wars.component.html
@@ -12,19 +12,22 @@
             <div class="col-md-6 col-sm-10 col-xs-12 center-col">
                 <ul class="no-padding list-style-4 list-style-color" *ngFor = "let dataItem of StarWarsPeople">
                     <li>
-                    <p><span>Height: </span>{{dataItem.height}}</p>
-                    <p><span>Mass: </span>{{dataItem.mass}}</p>
-                    <p><span>Year of birth</span>{{dataItem.birth_year}}</p>
-                    <p><span>Created at: </span>{{dataItem.created}}</p>
-                    <p><span>Edited at :</span>{{dataItem.edited}}</p>
-                    <p><span>Eye Color: </span>{{dataItem.eye_color}}</p>
-                    <p><span>Home World: </span>{{dataItem.homeworld}}</p>
-                    <p><span>Skin Color: </span>{{dataItem.skin_color}}</p>
-                    <p><span>Url :</span>{{dataItem.url}}</p>
-                    <p><span>Films: </span>{{dataItem.films}}</p>
-                    <p><span>Species: </span>{{dataItem.species}}</p>
-                    <p><span>Vehicle: </span>{{dataItem.vehicle}}</p>
-                    <p><span>StarShips: </span>{{dataItem.starships}}</p></li> 
+                    <p><span class="font-weight-600 text-uppercase">Name : </span>{{dataItem.name}}</p>
+                    <p><span class="font-weight-600 text-uppercase">Gender : </span>{{dataItem.gender}}</p>
+                    <p><span class="font-weight-600 text-uppercase">Height : </span>{{dataItem.height}}</p>
+                    <p><span class="font-weight-600 text-uppercase">Mass : </span>{{dataItem.mass}}</p>
+                    <p><span class="font-weight-600 text-uppercase">Year of birth : </span>{{dataItem.birth_year}}</p>
+                    <p><span class="font-weight-600 text-uppercase">Created at : </span>{{dataItem.created}}</p>
+                    <p><span class="font-weight-600 text-uppercase">Edited at :</span>{{dataItem.edited}}</p>
+                    <p><span class="font-weight-600 text-uppercase">Eye Color : </span>{{dataItem.eye_color}}</p>
+                    <p><span class="font-weight-600 text-uppercase">Hair Color : </span>{{dataItem.hair_color}}</p>
+                    <p><span class="font-weight-600 text-uppercase">Home World : </span>{{dataItem.homeworld}}</p>
+                    <p><span class="font-weight-600 text-uppercase">Skin Color : </span>{{dataItem.skin_color}}</p>
+                    <p><span class="font-weight-600 text-uppercase">Url :</span>{{dataItem.url}}</p>
+                    <p><span class="font-weight-600 text-uppercase">Films : </span>{{dataItem.films}}</p>
+                    <p><span class="font-weight-600 text-uppercase">Species : </span>{{dataItem.species}}</p>
+                    <p><span class="font-weight-600 text-uppercase">Vehicle : </span>{{dataItem.vehicles}}</p>
+                    <p><span class="font-weight-600 text-uppercase">Star-Ships : </span>{{dataItem.starships}}</p></li> 
                 </ul>
             </div>
         </div>
