--- a/UI/src/app/star-wars/star-wars.component.html
+++ b/UI/src/app/star-wars/star-wars.component.html
@@ -4,14 +4,14 @@
         <div class="row">
             <div class="col-md-7 col-sm-12 col-xs-12 center-col text-center margin-100px-bottom xs-margin-40px-bottom">
                 <div class="position-relative overflow-hidden width-100">
-                    <span class="text-small text-outside-line-full alt-font font-weight-600 text-uppercase">Star wars People</span>
+                    <span class="text-small text-outside-line-full alt-font font-weight-600 text-uppercase deep-pink">Star wars People</span>
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-md-6 col-sm-10 col-xs-12 center-col">
                 <ul class="no-padding list-style-4 list-style-color" *ngFor = "let dataItem of StarWarsPeople">
-                    <li>
+                    <li class="deep-pink">
                     <p><span class="font-weight-600 text-uppercase">Name : </span>{{dataItem.name}}</p>
                     <p><span class="font-weight-600 text-uppercase">Gender : </span>{{dataItem.gender}}</p>
                     <p><span class="font-weight-600 text-uppercase">Height : </span>{{dataItem.height}}</p>
